force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status__c/pd_jp_20151124__Pardot_DocodocoJp_Status__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>自動更新設定情報</label>
</CustomObject>