force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status__c/fields/pd_jp_20151124__AutoDeleteActivityDate__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__AutoDeleteActivityDate__c</fullName>
    <label>自動削除アクティビティ期間</label>
    <length>3</length>
    <type>Text</type>
</CustomField>