force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status__c/fields/pd_jp_20151124__AutoDeleteActivityEd__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__AutoDeleteActivityEd__c</fullName>
    <label>自動削除アクティビティ終了日</label>
    <type>DateTime</type>
</CustomField>