force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status__c/fields/pd_jp_20151124__AutoDeleteActivitySelect__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__AutoDeleteActivitySelect__c</fullName>
    <label>自動削除Activity種類選択</label>
    <length>255</length>
    <type>Text</type>
</CustomField>