force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status__c/fields/pd_jp_20151124__AutoDeleteActivitySt__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__AutoDeleteActivitySt__c</fullName>
    <label>自動削除アクティビティ開始日</label>
    <type>DateTime</type>
</CustomField>