force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status__c/fields/pd_jp_20151124__AutoDeleteDataType__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__AutoDeleteDataType__c</fullName>
    <label>自動削除データ種別</label>
    <length>1</length>
    <type>Text</type>
</CustomField>