force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status__c/fields/pd_jp_20151124__AutoDeleteType__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__AutoDeleteType__c</fullName>
    <label>自動削除種別</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>