force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status__c/fields/pd_jp_20151124__AutoMigrationExecDay__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__AutoMigrationExecDay__c</fullName>
    <label>マイグレーション起動日</label>
    <length>2</length>
    <type>Text</type>
</CustomField>