force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status__c/fields/pd_jp_20151124__AutoMigrationExecTime__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__AutoMigrationExecTime__c</fullName>
    <label>マイグレーション起動時刻</label>
    <length>10</length>
    <type>Text</type>
</CustomField>