force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status__c/fields/pd_jp_20151124__AutoMigrationType__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__AutoMigrationType__c</fullName>
    <label>マイグレーション起動種別</label>
    <length>1</length>
    <type>Text</type>
</CustomField>