force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status__c/fields/pd_jp_20151124__AutoUpdateTime__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__AutoUpdateTime__c</fullName>
    <label>自動更新時間</label>
    <length>2</length>
    <type>Text</type>
</CustomField>