force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status__c/fields/pd_jp_20151124__IsManual__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__IsManual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>※バージョンアップ後、未使用</description>
    <label>手動更新フラグ</label>
    <type>Checkbox</type>
</CustomField>