force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status__c/fields/pd_jp_20151124__IsPageviewAutoDelete__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__IsPageviewAutoDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ページビュー自動削除フラグ</label>
    <type>Checkbox</type>
</CustomField>