force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status__c/fields/pd_jp_20151124__scheduleJobId__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__scheduleJobId__c</fullName>
    <description>※バージョンアップ後、未使用</description>
    <label>スケジュールジョブID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>