force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status__c/fields/pd_jp_20151124__UpdateSetting__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__UpdateSetting__c</fullName>
    <label>自動更新設定</label>
    <length>20</length>
    <type>Text</type>
</CustomField>